--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,12 @@ html {
   font-style: normal;
 }
 
+/*
+underline for navigation a tags
+border-bottom: .2rem;
+*/
+
+
 body {
   margin: 0;
 }
@@ -24,4 +30,53 @@ body {
 img {
   display: block;
   width: 100%;
+}
+
+header {
+  text-align: center;
+}
+
+header h1 {
+  margin-bottom: 0;
+  margin-top: .85rem;
+}
+
+header h2 {
+  margin: 0;
+  font-size: 1.125rem;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  padding: 0 .55em;
+}
+
+a {
+  text-decoration: none;
+  color: #3783a3;
+  font-size: 1.125rem;
+}
+
+header img {
+  margin: 0;
+  padding: 1rem;
+}
+
+section {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: 1fr 1fr 1fr;
+}
+
+article a {
+  text-decoration: none;
 }
