Add margin and padding

--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,8 @@ body {
 img {
   display: block;
   width: 100%;
+
+  margin-top: 0;
 }
 
 header {
@@ -40,9 +42,10 @@ header h1 {
   margin-top: .87rem;
 }
 
-header h2 {
+span {
   margin: 0;
   font-size: 1.125rem;
+  font-weight: bold;
 }
 
 ul {
@@ -60,14 +63,14 @@ li {
 }
 
 a {
-  text-decoration: none;
   color: #3783a3;
   font-size: 1.125rem;
 }
 
 header img {
   margin: 0;
-  padding: .96rem;
+  padding: 1rem;
+  padding-bottom: .5rem;
 }
 
 section {
@@ -76,12 +79,24 @@ section {
   grid-auto-rows: 1fr 1fr 1fr;
 }
 
+article {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+
+  padding-top: 1.25rem;
+}
+
 article a {
+  font-size: 1rem;
   text-decoration: none;
+  border: .15rem solid #3783a3;
+  border-radius: .3rem;
+  padding: .5em 1em .6em;
 }
 
 main {
-  margin: 1.5rem;
+  margin: 1rem;
 }
 
 div i {
@@ -92,6 +107,33 @@ div i {
 
 div {
   text-align: center;
-  border-bottom: .2rem;
-  border-top: .2rem;
+  padding: 1rem;
+
+  border-top: .2rem solid #e2e2e2;
+  border-bottom: .2rem solid #e2e2e2;
+}
+
+h2 {
+  font-size: 1rem;
+  margin-top: 0;
+}
+
+article i {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-top: 1.5rem;
+}
+
+article p {
+  margin-top: .75rem;
+  margin-bottom: 1.5rem;
+}
+
+footer {
+  font-size: .82rem;
+  text-align: center;
+  margin-top: 1.5rem;
+  padding-top: .5rem;
+
+  border-top: .2rem solid #e2e2e2;
 }
