--- a/css/main.css
+++ b/css/main.css
@@ -29,17 +29,21 @@ body {
 img {
   display: block;
   width: 100%;
+  height: 100%;
 
   margin-top: 0;
 }
 
 header {
   text-align: center;
+
+  grid-area: banner;
 }
 
 header h1 {
   margin-bottom: 0;
   margin-top: .87rem;
+  padding: 0;
 }
 
 span {
@@ -97,6 +101,8 @@ article a {
 
 main {
   margin: 1rem;
+
+  grid-area: main;
 }
 
 div i {
@@ -136,4 +142,14 @@ footer {
   padding-top: .5rem;
 
   border-top: .2rem solid #e2e2e2;
+
+  grid-area: footer;
+}
+
+@media only screen and (min-width: 38em) {
+
+section {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
 }
