--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,9 @@ header h1 {
   margin-bottom: 0;
   margin-top: .87rem;
   padding: 0;
+
+  display: flex;
+  flex-direction: column;
 }
 
 span {
@@ -75,6 +78,8 @@ header img {
   margin: 0;
   padding: 1rem;
   padding-bottom: .5rem;
+  display: block;
+  width: 100%;
 }
 
 section {
@@ -148,8 +153,54 @@ footer {
 
 @media only screen and (min-width: 38em) {
 
-section {
-  grid-template-columns: 1fr 1fr 1fr;
-}
+  section {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: 1fr;
+    grid-column-gap: 1.5rem;
+  }
+
+  section img {
+    width: 100%;
+  }
+
+  header {
+    margin: 1.5rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas:
+      "left right"
+      "image image";
+  }
+
+  h1 {
+    grid-area: left;
+    text-align: left;
+  }
+
+  span {
+    grid-area: left;
+    text-align: left;
+  }
+
+  nav {
+    grid-area: right;
+    padding-top: 1rem;
+  }
+
+  ul {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  nav li {
+    padding-right: 0;
+  }
+
+  header img {
+    padding: 0;
+    display: flex;
+    grid-area: image;
+  }
 
 }
